agnostic-css/public/css-dist/common.concat.css
html,
body,
p,
ol,
ul,
li,
dl,
dt,
dd,
blockquote,
figure,
fieldset,
legend,
textarea,
/* Safari appears to be adding margin: 2px */
button,
pre,
hr,
h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
  padding: 0;
}

html {
  box-sizing: border-box;
}
*,
*::before,
*::after {
  box-sizing: inherit;
}

ul {
  list-style: none;
}

.width-full {
  width: 100%;
}

.screenreader-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border-width: 0;
}

/**
 * Color tokens
 */
:root {
  --agnostic-primary: #077acb;
  /* from / to are used for gradients and things like raised buttons */
  --agnostic-primary-from: #0662a2;
  --agnostic-primary-to: #2087d0;
  --agnostic-primary-hover: #2087d0;

  /* Used on Alert background */
  --agnostic-primary-light: #dcf1ff;
  --agnostic-primary-border: #c1d9e9;
  --agnostic-primary-dark: #063f69;

  --agnostic-secondary: #c94d2b;
  --agnostic-secondary-from: #a33e23;
  --agnostic-secondary-to: #bc583d;
  --agnostic-secondary-hover: #bc583d;
  --agnostic-action: #2fb751;
  --agnostic-action-light: #e2ffe9;
  --agnostic-action-border: #c7f0d1;
  --agnostic-action-from: #20913c;
  --agnostic-action-to: #41d466;
  --agnostic-action-hover: #3dd262;
  --agnostic-warning-light: #fff5d4;
  --agnostic-warning-border-accent: #ecd386;
  --agnostic-warning-border: #f0e3b9;
  --agnostic-warning-dark: #946c00;
  /* --agnostic-error: #d4361e; */
  --agnostic-error: #e23939;
  --agnostic-error-dark: #771414;
  --agnostic-error-light: #ffe0e0;
  --agnostic-error-border: #eec8c8;
  --agnostic-gray-extra-light: #f8f8f8;
  --agnostic-gray-light: #e9e9e9;
  --agnostic-gray-mid: #d8d8d8;
  --agnostic-gray-mid-dark: #cccccc;
  /* gray dark seems to meet a11y contrast requirements for help text on inputs */
  --agnostic-gray-dark: #757575;
  --agnostic-dark: #333333;
  --agnostic-light: #ffffff;
  --agnostic-disabled-bg: var(--agnostic-gray-light);
  --agnostic-disabled-color: var(--agnostic-gray-dark);
  --agnostic-focus-ring-color: rgba(55, 149, 225, 0.5);
  /* Caption, Sub-heading, etc., can be added here */
}

/**
 * Space tokens
 *
 * These spacing tokens are, essentially, literals for use on a
 * slightly modified 8pt grid, but also converge conveniently with
 * some common type scale boundaries:
 * 10, 12, 14, 18, 24, 36, 48, 64, 72
 * Note, that we do not prefix these with `agnostic-default-` as
 * they're not meant to be overriden and mainly used:
 * 1. internally within AgnosticUI
 * 2. optionally by your app if you like these and want to
 * import them for example.
 * Feel free to use your spacing scale if you so desire.
 */
:root {
  /* Rem-based sizes named by their initial pixel value assuming 1 rem is 16px.
  To accomodate I have several sizes here, but the preference should be to tay
  on the 8pt grid above 16px if at all possible */
  --fluid-2: 0.125rem;
  --fluid-4: 0.25rem;
  --fluid-6: 0.375rem;
  --fluid-8: 0.5rem;
  --fluid-10: 0.625rem;
  --fluid-12: 0.75rem;
  --fluid-14: 0.875rem;
  --fluid-16: 1rem;
  --fluid-18: 1.125rem;
  --fluid-20: 1.25rem;
  --fluid-24: 1.5rem;
  --fluid-32: 2rem;
  --fluid-36: 2.25rem;
  --fluid-40: 2.5rem;
  --fluid-48: 3rem;
  --fluid-56: 3.5rem;
  --fluid-64: 4rem;
  --fluid-72: 4.5rem;
  --fluid-80: 5rem;

  /* Note this is really for form controls like inputs and buttons */
  --agnostic-line-height: var(--fluid-20);
  --agnostic-side-padding: var(--fluid-12);
  --agnostic-input-side-padding: var(--fluid-12);
  --agnostic-vertical-pad: var(--fluid-8);
}

/**
 * Font size tokens
 * These are perhaps a bit arbitrary but were chosen from both the
 * default point sizes for type in OS X, and the classic typographic
 * scale as provided by The Elements of Typographic Style which are:
 * 9, 10, 11, 12, 13, 14, 18, 24, 36, 48, (alt. 60) 64, 72, 96, 144, 288
 * 
 * You're encouraged to change these setttings to whatever suits your app's needs
 * best—these are just sensible defaults to get you started.
 */

/*
   --fluid-2: 0.125rem;
  --fluid-4: 0.25rem;
  --fluid-6: 0.375rem;
  --fluid-8: 0.5rem;
  --fluid-10: 0.625rem;
  --fluid-12: 0.75rem;
  --fluid-14: 0.875rem;
  --fluid-16: 1rem;
  --fluid-18: 1.125rem;
  --fluid-20: 1.25rem;
  --fluid-24: 1.5rem;
  --fluid-32: 2rem;
  --fluid-36: 2.25rem;
  --fluid-40: 2.5rem;
  --fluid-48: 3rem;
  --fluid-56: 3.5rem;
  --fluid-64: 4rem;
  --fluid-72: 4.5rem;
  --fluid-80: 5rem;

  */
:root {
  --agnostic-font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Ubuntu,
    'Helvetica Neue', sans-serif;
  --agnostic-font-family-serif: Georgia, Cambria, 'Times New Roman', Times, serif;
  --agnostic-font-family-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
    'Liberation Mono', 'Courier New', monospace;
  --agnostic-h1: 4rem;
  --agnostic-h2: 3rem;
  --agnostic-h3: 2.25rem;
  --agnostic-h4: 1.5rem;
  --agnostic-h5: 1.125rem;
  --agnostic-h6: 0.75rem;
  --agnostic-body: 1rem;
  --agnostic-font-weight-bold: 600;
  --agnostic-font-weight-light: 300;
  --agnostic-font-color: #333333;
}

:root {
  --agnostic-timing-fast: 200ms;
  --agnostic-timing-medium: 300ms;
  --agnostic-timing-slow: 450ms;
}

:root {
  --agnostic-radius: var(--fluid-4, 0.25rem);
}

